implement tool casts